<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_players">

    <fragment
        android:id="@+id/navigation_players"
        android:name="com.timur.ewa.app.presentation.ui.player.PlayerListFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_player_list" />

    <fragment
        android:id="@+id/navigation_teams"
        android:name="com.timur.ewa.app.presentation.ui.teams.TeamsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_teams" />

    <fragment
        android:id="@+id/navigation_theme"
        android:name="com.timur.ewa.app.presentation.ui.theme.ThemeFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_theme" />

    <fragment
        android:id="@+id/playerDetailsFragment"
        android:name="com.timur.ewa.app.presentation.ui.playerdetails.PlayerDetailsFragment">
        <argument
            android:name="topScorer"
            app:argType="com.timur.ewa.app.data.model.TopScorer"
            app:nullable="false" />
    </fragment>
</navigation>