<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.theme.ThemeFragment">

    <TextView
        android:id="@+id/textViewThemeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/theme_title"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/themeSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="sans-serif"
        android:padding="20dp"
        android:text="@string/theme_dark"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:thumbTint="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        android:theme="@style/MySwitch"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPrivacyPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif"
        android:paddingStart="20dp"
        android:text="@string/privacy"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/themeSwitch" />

    <ScrollView
        android:id="@+id/scrollViewPrivacyPolicy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewPrivacyPolicy">

        <TextView
            android:id="@+id/textViewPolicyContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="20dp"
            android:text="@string/privacy_policy_text"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
